--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div id="logo">
 
                         <!--Logo that is shown on the banner-->
-                        <img src="images/logo.png" id="banner-logo" alt="Landing Page"/>
+                        <img src="" id="banner-logo" alt="Landing Page"/>
                         <!--End of Banner Logo-->
 
                         <!--The Logo that is shown on the sticky Navigation Bar-->
@@ -135,7 +135,7 @@
 
                 <div class="section-heading">
                     <h1>Your Future is Here</h1>
-                    <h2>We are here to help you fulfill your next gen gaming needs!!</h2>
+                    <h2>We''ll Return in a Moment!!</h2>
                 </div>
 
                 <!--Call to Action-->
